# alphaskills

./: .gitignore  .plugin-manifest.json  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
alphaskills_py/: __init__.py  _http.py  arxiv.py  biorxiv.py  cftc.py  clinical_trials.py  fda.py  federal_register.py  fred.py  nhtsa.py  nih_reporter.py  pubmed.py  sec_edgar.py  signals.py
business-plan/: ALPHASTACK-1B-PLAN.md
skills/activist-campaign-tracker/: SKILL.md
skills/alphastack-life-navigator/: SKILL.md
skills/arxiv-paper-scan/: SKILL.md
skills/biorxiv-preprint-scan/: SKILL.md
skills/catalyst-calendar/: SKILL.md
skills/clinical-trial-intel/: SKILL.md
skills/company-deepdive/: SKILL.md
skills/courtlistener-docket-tracker/: SKILL.md
skills/drug-affordability-rescue/: SKILL.md
skills/drug-lifecycle-tracker/: SKILL.md
skills/executive-network-mapper/: SKILL.md
skills/fda-drug-recalls-faers/: SKILL.md
skills/federal-register-tracker/: SKILL.md
skills/fred-economic-data/: SKILL.md
skills/futures-positioning-check/: SKILL.md
skills/github-repo-intel/: SKILL.md
skills/hedge-fund-holdings/: SKILL.md
skills/ma-target-scanner/: SKILL.md
skills/nih-grant-scan/: SKILL.md
skills/patient-trial-navigator/: SKILL.md
skills/pubmed-paper-scan/: SKILL.md
skills/rare-disease-detective/: SKILL.md
skills/sec-insider-scan/: SKILL.md
skills/sec-s1-ipo-tracker/: SKILL.md
skills/short-squeeze-detector/: SKILL.md
skills/stealth-accumulation-detector/: SKILL.md
skills/stock-signal-report/: SKILL.md
skills/vehicle-recall-check/: SKILL.md
tests/: smoke_test.py
